# watertwin

./: .gitattributes  .gitignore  CHANGELOG.md  QUICKSTART.md  README.md  main.py  pyproject.toml  requirements.txt
application/: HydraulicModel.py  app.py  scenario_app.py  scenario_monitoring.py  test.py  twin_app.py  twin_app_monitoring.py
application/scenario_folder/: 5.scenario  6.scenario  junior.scenario
application/utils/: HydraulicModel.py  command_showing.py  graph.py
communication/: capture.txt  command.txt  communication.py
model/: HydraulicModel.py  Model_Equation.txt  Model_eq.txt  Model_math.py  final_model.txt  model_update_1.txt  model_update_2.txt  test.py
visualisation/: communication.py  virtual3D.py  visualisation3D.py
visualisation/objet/: batteries.mtl  ceinture_pompe.mtl  conduit1.mtl  conduit2.mtl  connexion.mtl  controlbox1.mtl  eau_3.mtl  eau_7.mtl  maison.mtl  objects.mtl  panneau_solaire.mtl  pomp2.mtl  pompe1.mtl  structure.mtl  support_pompe.mtl  texte.mtl  vanne_7.mtl  vanne_9.mtl
