[project]
name = "water-twin"
version = "1.0.0"
description = "Digital Twin of Water Supply System without sensors"
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "ttkbootstrap>=1.10.0",
    "Pillow>=9.0.0",
    "numpy>=1.21.0",
    "matplotlib>=3.5.0",
    "ursina>=5.0.0",
    "psutil>=5.9.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

